[workspace]
members = [
    "primitives",
    "runtimes/common",
    "runtimes/bitriel",
    "runtimes/rieltest"
]

cargo-features = ["resolver"]

resolver = "2"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
# Acala runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1