
[package]
name = "bitriel-service"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[dependencies]
log = "0.4.8"
async-trait = { version = "0.1.48" }
hex-literal = "0.3.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
codec = { package = "parity-scale-codec", version = "3.0.0" }
futures = "0.3.15"
hex = "0.4.0"
jsonrpc-core = "18.0.0"

coins-bip32 = "0.6.0"
coins-bip39 = "0.6.0"
elliptic-curve = { version = "0.11.12", default-features = false, features = ["hazmat", "sec1"] }
k256 = { version = "0.10.4", default-features = false, features = ["keccak256", "ecdsa", "std"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-cli = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18"}
sc-tracing = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

# selendra denpendency
cumulus-client-cli = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-client-network = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-client-service = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-client-consensus-aura = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-client-consensus-common = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-primitives-core = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-pallet-parachain-system = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-relay-chain-interface = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }

selendra-primitives = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }
selendra-service = { git = "https://github.com/selendra/selendrachain", branch = "selendra-0.2.3" }

bitriel-primitives = { path = "../../primitives" }
bitriel-rpc = { path = "../rpc" }

runtime-common = { path = "../../runtimes/common" }
bitriel-runtime = { path = "../../runtimes/bitriel", optional = true }
rieltest-runtime = { path = "../../runtimes/rieltest", optional = true }

[features]
default = [ "std", "with-all-runtime" ]
std = []
runtime-benchmarks = [
	"bitriel-runtime/runtime-benchmarks",
	"rieltest-runtime/runtime-benchmarks",
	"selendra-service/runtime-benchmarks",
]
try-runtime = [
	"bitriel-runtime/try-runtime",
	"rieltest-runtime/try-runtime",
	"selendra-service/try-runtime",
]
with-bitriel-runtime = [
	"bitriel-runtime",
]
with-rieltest-runtime = [
	"rieltest-runtime",
]
with-all-runtime = [
	"with-bitriel-runtime",
	"with-rieltest-runtime",
]