[package]
name = "rieltest-runtime"
version = "0.1.0"
authors = ["Selendra <info@selendra.org>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.18" }

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.4", optional = true }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.132", optional = true, features = ["derive"] }
smallvec = "1.6.1"

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
frame-executive = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
frame-try-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.18" }
pallet-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-authorship = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-api = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-offchain = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-session = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }
sp-version = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.18" }

# Selendra
pallet-xcm = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
selendra-parachain = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
selendra-runtime-common = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
xcm = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
xcm-builder = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
xcm-executor = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }

# Cumulus
cumulus-pallet-aura-ext = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-pallet-dmp-queue = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-pallet-parachain-system = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-pallet-session-benchmarking = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-pallet-xcm = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-primitives-core = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-primitives-timestamp = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
cumulus-primitives-utility = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
pallet-collator-selection = { git = "https://github.com/selendra/selendrachain", default-features = false, branch = "selendra-0.2.3" }
parachain-info = { git = "https://github.com/selendra/selendrachain", default-features = false,  branch = "selendra-0.2.3" }

# Local Dependency
bitriel-primitives = { path = "../../primitives", default-features = false }
runtime-common = { path = "../common", default-features = false }

# local modules
module-session-manager = { path = "../../modules/session-manager", default-features = false }

[features]
default = [
	"std",
]
std = [
	"codec/std",
	"log/std",
	"scale-info/std",
	"serde",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-collator-selection/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"selendra-parachain/std",
	"selendra-runtime-common/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"bitriel-primitives/std",
	"runtime-common/std",
	"module-session-manager/std",
]

# When enabled, the runtime api will not be build.
#
# This is required by Cumulus to access certain types of the
# runtime without clashing with the runtime api exported functions
# in WASM.
disable-runtime-api = []

# A feature that should be enabled when the runtime should be build for on-chain
# deployment. This will disable stuff that shouldn't be part of the on-chain wasm
# to make it smaller like logging for example.
on-chain-release-build = [
	"sp-api/disable-logging",
]

runtime-benchmarks = [
	"hex-literal",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"sp-api/disable-logging",
]

try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"module-session-manager/try-runtime",
]
